0023281: Removed unused OpenGl_ImageBox