src/Image/Image_Color.hxx
@@ -404,9 +404,9 @@ public:
 template<typename ColorType_t>
 inline ColorType_t Image_ColorSumm3 (const ColorType_t& theA, const ColorType_t& theB)
 {
-  ColorType_t aRes = { theA.v[0] + theB.v[0],
+  ColorType_t aRes = {{theA.v[0] + theB.v[0],
                        theA.v[1] + theB.v[1],
-                       theA.v[2] + theB.v[2] };
+                       theA.v[2] + theB.v[2]}};
   return aRes;
 }
 
@@ -433,10 +433,10 @@ inline Image_ColorBGRF operator+ (const Image_ColorBGRF& theA, const Image_Color
 template<typename ColorType_t>
 inline ColorType_t Image_ColorSumm4 (const ColorType_t& theA, const ColorType_t& theB)
 {
-  ColorType_t aRes = { theA.v[0] + theB.v[0],
+  ColorType_t aRes = {{theA.v[0] + theB.v[0],
                        theA.v[1] + theB.v[1],
                        theA.v[2] + theB.v[2],
-                       theA.v[3] + theB.v[3] };
+                       theA.v[3] + theB.v[3]}};
   return aRes;
 }
 
@@ -474,9 +474,9 @@ inline Image_ColorBGRAF operator+ (const Image_ColorBGRAF& theA, const Image_Col
 template<typename ColorType_t>
 inline ColorType_t Image_ColorSub3 (const ColorType_t& theA, const ColorType_t& theB)
 {
-  ColorType_t aRes = { theA.v[0] - theB.v[0],
+  ColorType_t aRes = {{theA.v[0] - theB.v[0],
                        theA.v[1] - theB.v[1],
-                       theA.v[2] - theB.v[2] };
+                       theA.v[2] - theB.v[2]}};
   return aRes;
 }
 
@@ -503,10 +503,10 @@ inline Image_ColorBGRF operator- (const Image_ColorBGRF& theA, const Image_Color
 template<typename ColorType_t>
 inline ColorType_t Image_ColorSub4 (const ColorType_t& theA, const ColorType_t& theB)
 {
-  ColorType_t aRes = { theA.v[0] - theB.v[0],
+  ColorType_t aRes = {{theA.v[0] - theB.v[0],
                        theA.v[1] - theB.v[1],
                        theA.v[2] - theB.v[2],
-                       theA.v[3] - theB.v[3] };
+                       theA.v[3] - theB.v[3]}};
   return aRes;
 }
 
